# tutor-db

./: Cargo.toml  database.sql
src/iter5/: errors.rs  routes.rs
src/iter5/dbaccess/: course.rs  tutor.rs
src/iter5/dbscripts/: course.sql  tutor-course.sql
src/iter5/handlers/: course.rs  general.rs  tutor.rs
src/iter5/models/: course.rs  tutor.rs
